# tempcheckbot

./: .gitignore  CMakeLists.txt  README.md  package.xml
ign_gazebo_version/: turtlebot3_empty_world_ign.sdf
ign_gazebo_version/Turtlebot3_Burger/: model.config  model.sdf
ign_gazebo_version/person_standing1/: model.sdf
ign_gazebo_version/person_standing2/: model.sdf
ign_gazebo_version/person_standing3/: model.sdf
launch/: tempcheckbot.launch  tempcheckbot_gmapping.launch  tempcheckbot_mapping.launch  tempcheckbot_navigation.launch  tempcheckbot_world.launch
maps/: map.pgm  map.yaml
src/: moveturtlebot.cpp
worlds/: cafe.world  custom_world.world  custom_world_with_walls.world  empty.world  shape.world  static_cafe.world
